<resources>
    <string name="app_name">ThisuraKarunanayaka</string>
    <string name="login">Login</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="network_error">Please check the network connection</string>
    <string name="invalid_username">invalid username or password</string>
    <string name="Load_userData">Load User Data</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="company">Company</string>
    <string name="id">Id</string>
    <string name="position">Position</string>
    invalid username or password
</resources>